Installata libreria JavaFX